<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.onix.internship.ui.addTask.AddTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_marginLeft="@dimen/margin_30">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_create_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.activity.ActivityFragment">

            <TextView
                style="@style/AddTaskHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_plan_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                style="@style/EditText"/>

            <TextView
                style="@style/AddTaskHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tv_plan_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableRightCompat="@drawable/ic_light_calendar"
                android:text="@{viewModel.selectedDate}"/>

            <TextView
                style="@style/AddTaskHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_from_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewModel.timeFrom}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_to_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewModel.timeUntil}"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                style="@style/AddTaskHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cv_calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_plan_description"
                    style="@style/EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_description_context_menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_description_context_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_three_dots"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/AddTaskHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/RadioButton"
                    android:text="@string/type_personal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/RadioButton"
                    android:text="@string/type_private" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/RadioButton"
                    android:text="@string/type_secret" />

            </RadioGroup>

            <TextView
                style="@style/AddTaskHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_tag_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </HorizontalScrollView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_new_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_tag_btn"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_task"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:layout_marginBottom="@dimen/margin_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>