<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_back"
    android:padding="@dimen/padding_30"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_tag"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_18"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_add_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_tag_hint"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_40"
        style="@style/EditText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/cv_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_weight="1"
            style="@style/BorderButton"
            android:text="@string/cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            style="@style/Button"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>
</layout>