<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.ActivityFragment">

        <SearchView
            android:id="@+id/searchView"
            style="@style/SearchViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="@+id/searchView"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task"
                android:textSize="@dimen/font_size_24"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_month_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="@dimen/font_size_12"
                app:drawableLeftCompat="@drawable/ic_calendar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_week_days_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:text="@string/day"
            app:layout_constraintEnd_toEndOf="@+id/rv_week_days_list"
            app:layout_constraintStart_toStartOf="@+id/rv_week_days_list"
            app:layout_constraintTop_toBottomOf="@+id/rv_week_days_list" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rv_week_days_list"
            app:layout_constraintStart_toStartOf="@+id/rv_week_days_list"
            app:layout_constraintTop_toBottomOf="@+id/tv_day">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar_img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_task_list_text"
                android:textAlignment="center"
                android:textSize="@dimen/font_size_14" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>